@@ -1,3 +1,12 @@
+2008-04-01  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>
+
+	* pycvsanaly2/extensions/Metrics.py:
+
+	Tested against SF.net (CVS) repositories. Paths are
+	correctly identified for those repositories.
+
+	SVN not working yet due to an apparent bug in RepositoryHandler.
+
 2008-03-31  Israel Herraiz <herraiz@gsyc.escet.urjc.es>
 
 	* pycvsanaly2/extensions/FilePaths.py:
